{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 297,
  "lineage": "adb07701-c42d-12eb-bec4-432a57f2d3a0",
  "resources": [
    {
      "module": "module.ec2-sg-mongo[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:security-group/sg-0218cce6ade2a9824",
            "description": "Mongo DB Security group.",
            "egress": [],
            "id": "sg-0218cce6ade2a9824",
            "ingress": [],
            "name": "usw2-shared-ec2-sg20240523141504370300000015",
            "name_prefix": "usw2-shared-ec2-sg",
            "owner_id": "865587657226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "usw2-shared-ec2-sg",
              "Owner": "jase"
            },
            "tags_all": {
              "Name": "usw2-shared-ec2-sg",
              "Owner": "jase"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_dns64_nat_gateway",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_dns64_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-sg-mongo[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all traffic",
            "from_port": 0,
            "id": "sgrule-2533030211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0218cce6ade2a9824",
            "security_group_rule_id": "sgr-08299f202ca24392a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.ec2-sg-mongo.aws_security_group.mongo",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_dns64_nat_gateway",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_dns64_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-sg-mongo[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongoPort",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.15.0.0/20"
            ],
            "description": "Mongo DB default port",
            "from_port": 27017,
            "id": "sgrule-3357462629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0218cce6ade2a9824",
            "security_group_rule_id": "sgr-027a15187d0394960",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.ec2-sg-mongo.aws_security_group.mongo",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_dns64_nat_gateway",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_dns64_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"usw2-shared-ext-mongodb\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:security-group/sg-02e73b0acbd5c553f",
            "description": "Firewall for the bastion instance",
            "egress": [],
            "id": "sg-02e73b0acbd5c553f",
            "ingress": [],
            "name": "usw2-bastion-sg20240523141504372900000017",
            "name_prefix": "usw2-bastion-sg",
            "owner_id": "865587657226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "usw2-bastion-sg",
              "Project": "jase-usw2-ec2"
            },
            "tags_all": {
              "Name": "usw2-bastion-sg",
              "Project": "jase-usw2-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.ec2.data.aws_region.current",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_dns64_nat_gateway",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_dns64_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"usw2-shared-ext-mongodb\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "52.119.127.230/32"
            ],
            "description": "Allow SSH traffic.",
            "from_port": 22,
            "id": "sgrule-452532091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e73b0acbd5c553f",
            "security_group_rule_id": "sgr-0647b6d741c219d68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.ec2.aws_security_group.bastion",
            "module.ec2.data.aws_region.current",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_dns64_nat_gateway",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_dns64_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.eks-usw2.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:security-group/sg-071f44f5d8ccebfb7",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-071f44f5d8ccebfb7",
            "ingress": [],
            "name": "jase-shared-usw2-cluster-2024052314130248580000000f",
            "name_prefix": "jase-shared-usw2-cluster-",
            "owner_id": "865587657226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jase-shared-usw2-cluster"
            },
            "tags_all": {
              "Name": "jase-shared-usw2-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-usw2.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:security-group/sg-02e6dc49e384b3691",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-02e6dc49e384b3691",
            "ingress": [],
            "name": "jase-shared-usw2-node-20240523141303336000000010",
            "name_prefix": "jase-shared-usw2-node-",
            "owner_id": "865587657226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jase-shared-usw2-node",
              "kubernetes.io/cluster/jase-shared-usw2": "owned"
            },
            "tags_all": {
              "Name": "jase-shared-usw2-node",
              "kubernetes.io/cluster/jase-shared-usw2": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-usw2.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4209336816",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071f44f5d8ccebfb7",
            "security_group_rule_id": "sgr-0fc8cd9eb9fe100c0",
            "self": false,
            "source_security_group_id": "sg-02e6dc49e384b3691",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "jase-shared-usw2_ingress_routable_cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.15.0.0/20"
            ],
            "description": "Ingress from cluster routable networks",
            "from_port": 443,
            "id": "sgrule-2524889913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-071f44f5d8ccebfb7",
            "security_group_rule_id": "sgr-08dac1cf7c3d963e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-usw2.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1636335976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-075ed951e2c263328",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2377717761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-0638083f3107ef9fc",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1265859022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-054e362fd36f5e6a3",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2184257112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-0ed1306330e34b71b",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2439848569",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-02f65f7cd764680f2",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4123791794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-06ed59e4f1b9936ff",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2260923077",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-03364fca23cc71eec",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-464340310",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-0c21c3e20f2179c14",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2702240164",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-01959c6b1d7922791",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-89082443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-0f75e5ed7aadfebd3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "jase-shared-usw2_ingress_cluster_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-639536848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-011611fe83b3dc4a5",
            "self": false,
            "source_security_group_id": "sg-071f44f5d8ccebfb7",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "jase-shared-usw2_ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-659319172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02e6dc49e384b3691",
            "security_group_rule_id": "sgr-00aefea15d86dfe2c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-usw2.module.eks.aws_security_group.cluster",
            "module.eks-usw2.module.eks.aws_security_group.node",
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:network-acl/acl-00bfe8d4bb4dbd136",
            "default_network_acl_id": "acl-00bfe8d4bb4dbd136",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00bfe8d4bb4dbd136",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "865587657226",
            "subnet_ids": [
              "subnet-025e34713fc7d5089",
              "subnet-02ecd6f649f62c4f5",
              "subnet-03b7990f8e358e827",
              "subnet-0462989e59d9db259",
              "subnet-064e9fb053d4b8ad4",
              "subnet-0ba9621c981f3ee45"
            ],
            "tags": {
              "Name": "jase-usw2-shared-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:route-table/rtb-05513d296d7644a9c",
            "default_route_table_id": "rtb-05513d296d7644a9c",
            "id": "rtb-05513d296d7644a9c",
            "owner_id": "865587657226",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "jase-vpc1-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-vpc1-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:security-group/sg-0ec579004f994e5c3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ec579004f994e5c3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "865587657226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jase-usw2-shared-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-default",
              "Owner": "jase",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0523db2d9c45dea42",
            "domain": "vpc",
            "id": "eipalloc-0523db2d9c45dea42",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-68-156-22.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.156.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jase-usw2-shared-us-west-2a",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-us-west-2a",
              "Owner": "jase",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:internet-gateway/igw-093e03c512db4693f",
            "id": "igw-093e03c512db4693f",
            "owner_id": "865587657226",
            "tags": {
              "Name": "jase-usw2-shared",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared",
              "Owner": "jase",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0523db2d9c45dea42",
            "association_id": "eipassoc-010b216d94ea8efc6",
            "connectivity_type": "public",
            "id": "nat-0e71510df9a0b089b",
            "network_interface_id": "eni-0d8528aa0d2e3a954",
            "private_ip": "10.15.11.155",
            "public_ip": "54.68.156.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0462989e59d9db259",
            "tags": {
              "Name": "jase-usw2-shared-us-west-2a",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-us-west-2a",
              "Owner": "jase",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-070f0a543ff30f9941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e71510df9a0b089b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-070f0a543ff30f994",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-093e03c512db4693f",
            "id": "r-rtb-0f51851f3a22057701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f51851f3a2205770",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:route-table/rtb-070f0a543ff30f994",
            "id": "rtb-070f0a543ff30f994",
            "owner_id": "865587657226",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jase-vpc1-private",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-vpc1-private",
              "Owner": "jase",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:route-table/rtb-0f51851f3a2205770",
            "id": "rtb-0f51851f3a2205770",
            "owner_id": "865587657226",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jase-vpc1-public",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-vpc1-public",
              "Owner": "jase",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02203bc5431776663"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": []
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc425ce26f7cd2d3",
            "route_table_id": "rtb-070f0a543ff30f994",
            "subnet_id": "subnet-0ba9621c981f3ee45"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa59864d90178fe0",
            "route_table_id": "rtb-070f0a543ff30f994",
            "subnet_id": "subnet-03b7990f8e358e827"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbf07b17b2fb632d",
            "route_table_id": "rtb-070f0a543ff30f994",
            "subnet_id": "subnet-02ecd6f649f62c4f5"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb1e47bf7daed18",
            "route_table_id": "rtb-0f51851f3a2205770",
            "subnet_id": "subnet-0462989e59d9db259"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d3d3b09714a02dc",
            "route_table_id": "rtb-0f51851f3a2205770",
            "subnet_id": "subnet-064e9fb053d4b8ad4"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1e598e15f4beb4",
            "route_table_id": "rtb-0f51851f3a2205770",
            "subnet_id": "subnet-025e34713fc7d5089"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-0ba9621c981f3ee45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.15.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba9621c981f3ee45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-private-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-private-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-03b7990f8e358e827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.15.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b7990f8e358e827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-private-us-west-2b",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-private-us-west-2b",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-02ecd6f649f62c4f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.15.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ecd6f649f62c4f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-private-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-private-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Private"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-0462989e59d9db259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.15.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0462989e59d9db259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-public-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-public-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-064e9fb053d4b8ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.15.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064e9fb053d4b8ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-public-us-west-2b",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-public-us-west-2b",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:subnet/subnet-025e34713fc7d5089",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.15.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e34713fc7d5089",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865587657226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jase-usw2-shared-public-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jase-usw2-shared-public-us-west-2a",
              "Owner": "jase",
              "Terraform": "true",
              "Tier": "Public",
              "kubernetes.io/cluster/jase-shared-usw2": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02203bc5431776663"
          },
          "dependencies": [
            "data.aws_availability_zones.usw2",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2"
    },
    {
      "module": "module.myvpc[\"usw2-shared\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:865587657226:vpc/vpc-02203bc5431776663",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/20",
            "default_network_acl_id": "acl-00bfe8d4bb4dbd136",
            "default_route_table_id": "rtb-05513d296d7644a9c",
            "default_security_group_id": "sg-0ec579004f994e5c3",
            "dhcp_options_id": "dopt-061931d6a40c37f6e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02203bc5431776663",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05513d296d7644a9c",
            "owner_id": "865587657226",
            "tags": {
              "Name": "jase-usw2-shared",
              "Owner": "jase",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jase-usw2-shared",
              "Owner": "jase",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}